# blackboxaudio-sap

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
libs/sap_common/: pyproject.toml
libs/sap_common/sap_common/: __init__.py  config.py  db.py  health.py  minio_client.py  models.py  schemas.py  valkey_streams.py
scripts/: download_models.py
services/aligner/: Dockerfile  pyproject.toml
services/aligner/aligner/: fusion.py  worker.py
services/asr_worker/: Dockerfile  pyproject.toml
services/asr_worker/asr_worker/: transcriber.py  worker.py
services/audio_gateway/: Dockerfile  pyproject.toml
services/audio_gateway/audio_gateway/: main.py  ws_manager.py
services/audio_gateway/audio_gateway/routes/: flamingo.py  results.py  sessions.py  tts.py  upload.py  ws.py
services/audio_preprocess/: Dockerfile  pyproject.toml
services/audio_preprocess/audio_preprocess/: pipeline.py  worker.py
services/flamingo_worker/: Dockerfile  pyproject.toml
services/flamingo_worker/flamingo_worker/: worker.py
services/music_worker/: Dockerfile  pyproject.toml
services/music_worker/music_worker/: chords.py  features.py  key_detection.py  tempo.py  worker.py
services/tts_worker/: Dockerfile  pyproject.toml
services/tts_worker/tts_worker/: synthesizer.py  worker.py
services/voxstral_vllm/: Dockerfile
services/voxstral_worker/: Dockerfile  pyproject.toml
services/voxstral_worker/voxstral_worker/: worker.py
