[project]
name = "sap-common"
version = "0.1.0"
description = "Shared library for SAP services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "valkey>=6.0,<7",
    "miniopy-async>=1.19,<2",
    "structlog>=24.1,<25",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sap_common*"]
