[project]
name = "asr-worker"
version = "0.1.0"
description = "SAP ASR Worker - Dual-pass Whisper transcription"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2",
    "faster-whisper>=1.0,<2",
    "sap-common",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["asr_worker*"]
