[project]
name = "audio-preprocess"
version = "0.1.0"
description = "SAP Audio Preprocessing Worker"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2",
    "scipy>=1.12,<2",
    "sap-common",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["audio_preprocess*"]
