[project]
name = "music-worker"
version = "0.1.0"
description = "SAP Music Analysis Worker - Essentia + librosa"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2",
    "essentia==2.1b6.dev1389",
    "librosa>=0.10,<1",
    "sap-common",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["music_worker*"]
